Improve imx8 defconfigs
Adapt the imx8 defconfigs to the new kernel version 5.15 based in the
imx_v8_defconfig.
    Explicitly set:
    - CONFIG_DMABUF_HEAPS for gstreamer video playback
    - CONFIG_FB For display support
    - CONFIG_GPIO_MXC for gpio support

Disable LOCALVERSION for fsimx8mp, like with the other fsimx8
architectures

--- a/arch/arm64/configs/fsimx8mn_defconfig
+++ b/arch/arm64/configs/fsimx8mn_defconfig
@@ -5,6 +5,7 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
+CONFIG_BPF_JIT=y
 CONFIG_PREEMPT=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_BSD_PROCESS_ACCT=y
@@ -17,7 +18,6 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_NUMA_BALANCING=y
 CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_HUGETLB=y
@@ -36,7 +36,6 @@ CONFIG_ARCH_MXC=y
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NUMA=y
-CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_XEN=y
@@ -50,19 +49,16 @@ CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=m
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ACPI_CPPC_CPUFREQ=m
 CONFIG_ARM_IMX_CPUFREQ_DT=y
-CONFIG_ARM_SCPI_PROTOCOL=y
-CONFIG_EFI_CAPSULE_LOADER=y
 CONFIG_ACPI=y
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_GHES=y
-CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 CONFIG_ACPI_APEI_EINJ=y
 CONFIG_VIRTUALIZATION=y
@@ -116,12 +112,10 @@ CONFIG_IP6_NF_TARGET_MASQUERADE=m
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
-CONFIG_NET_DSA_TAG_KSZ=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_LLC2=y
-CONFIG_BPF_JIT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
 CONFIG_CAN_MCP251X=y
@@ -168,11 +162,11 @@ CONFIG_PCI_HOST_THUNDER_ECAM=y
 CONFIG_PCI_IMX6_HOST=y
 CONFIG_PCI_HISI=y
 CONFIG_PCIE_KIRIN=y
-CONFIG_PCIE_LAYERSCAPE_GEN4=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_FW_LOADER_USER_HELPER=y
-CONFIG_SIMPLE_PM_BUS=y
+CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_EFI_CAPSULE_LOADER=y
 CONFIG_MTD=y
 CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_BLOCK=y
@@ -229,13 +223,12 @@ CONFIG_BNX2X=m
 CONFIG_MACB=y
 CONFIG_THUNDER_NIC_PF=y
 CONFIG_FEC=y
-CONFIG_FSL_SDK_DPAA_ETH=y
-CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
-CONFIG_AT803X_PHY=y
 CONFIG_MARVELL_PHY=m
 CONFIG_MARVELL_10G_PHY=m
 CONFIG_MICREL_PHY=y
 CONFIG_MICROSEMI_PHY=y
+CONFIG_AT803X_PHY=y
+CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
 CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_LAN78XX=m
@@ -281,24 +274,21 @@ CONFIG_SPMI=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX8MN=y
 CONFIG_GPIOLIB=y
-CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_MXC=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
-CONFIG_POWER_AVS=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_PWM_FAN=m
 CONFIG_THERMAL_WRITABLE_TRIPS=y
-CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
-CONFIG_DEVICE_THERMAL=y
 CONFIG_IMX8MM_THERMAL=y
+CONFIG_DEVICE_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_ARM_SBSA_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_IMX2_WDT=y
-CONFIG_MFD_IMX_AUDIOMIX=y
 CONFIG_MFD_SEC_CORE=y
 CONFIG_MFD_ROHM_BD718XX=y
 CONFIG_REGULATOR=y
@@ -306,13 +296,12 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_BD718XX=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
+CONFIG_MEDIA_PLATFORM_SUPPORT=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_VIDEO_MXC_CAPTURE=y
+CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_MXC_MIPI_CSI=y
 CONFIG_MXC_CAMERA_OV5640_MIPI_V2=y
@@ -330,18 +319,18 @@ CONFIG_DRM_PANEL_NEWVISION_NV3051D=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
+CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_SII902X=m
 CONFIG_DRM_TOSHIBA_FUS_TC358775=y
 CONFIG_DRM_TOSHIBA_TC358775=y
 CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_I2C_ADV7511=y
-CONFIG_DRM_NWL_MIPI_DSI=y
+CONFIG_DRM_CDNS_HDCP=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_TI_SN65DSI84=y
 CONFIG_DRM_IMX=y
-CONFIG_DRM_CDNS_HDCP=y
 CONFIG_DRM_IMX_LCDIF_MUX_DISPLAY=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
@@ -356,9 +345,9 @@ CONFIG_DRM_MXSFB=y
 CONFIG_DRM_PL111=m
 CONFIG_DRM_LIMA=m
 CONFIG_DRM_PANFROST=m
+CONFIG_FB=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_FB_EFI=y
-CONFIG_BACKLIGHT_GENERIC=m
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_LP855X=m
 CONFIG_LOGO=y
@@ -373,19 +362,16 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=m
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_MICFIL=y
-CONFIG_SND_SOC_FSL_EASRC=y
 CONFIG_SND_IMX_SOC=y
-CONFIG_SND_SOC_IMX_RPMSG=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
-CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AUDMIX=y
+CONFIG_SND_SOC_IMX_RPMSG=y
 CONFIG_SND_SOC_IMX_PDM_MIC=y
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_OF=m
 CONFIG_SND_SOC_SOF_IMX_TOPLEVEL=y
 CONFIG_HID_MULTITOUCH=y
-CONFIG_I2C_HID=m
 CONFIG_USB=y
 CONFIG_USB_OTG=y
 CONFIG_USB_EHCI_HCD=y
@@ -464,6 +450,9 @@ CONFIG_IMX_SDMA=m
 CONFIG_MV_XOR_V2=y
 CONFIG_MXS_DMA=y
 CONFIG_DMATEST=y
+CONFIG_DMABUF_HEAPS=y
+CONFIG_DMABUF_HEAPS_SYSTEM=y
+CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_UIO=y
 CONFIG_UIO_PCI_GENERIC=y
 CONFIG_VFIO=y
@@ -474,10 +463,6 @@ CONFIG_VIRTIO_MMIO=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_IMX_CAPTURE=y
-CONFIG_ION=y
-CONFIG_ION_SYSTEM_HEAP=y
-CONFIG_ION_CMA_HEAP=y
-CONFIG_FSL_SDK_DPA=y
 CONFIG_FSL_PPFE=y
 CONFIG_FSL_PPFE_UTIL_DISABLED=y
 CONFIG_CLK_IMX8MN=y
@@ -493,6 +478,7 @@ CONFIG_IIO=y
 CONFIG_TI_ADS1015=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX27=y
+CONFIG_RESET_IMX7=y
 CONFIG_PHY_MIXEL_MIPI_DPHY=y
 CONFIG_FSL_IMX8_DDR_PMU=y
 CONFIG_NVMEM_IMX_OCOTP=y
@@ -500,11 +486,10 @@ CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_MUX_MMIO=y
 CONFIG_MXC_SIM=y
-# CONFIG_MXC_VPU_MALONE is not set
-# CONFIG_MXC_VPU_WINDSOR is not set
-# CONFIG_MXC_IMX_DMX_HW is not set
 CONFIG_MXC_EMVSIM=y
 CONFIG_MXC_MLB150=y
+# CONFIG_MXC_VPU_MALONE is not set
+# CONFIG_MXC_VPU_WINDSOR is not set
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -550,16 +535,10 @@ CONFIG_CRYPTO_TLS=m
 CONFIG_CRYPTO_CBC=m
 CONFIG_CRYPTO_CTS=m
 CONFIG_CRYPTO_LRW=m
-CONFIG_CRYPTO_XTS=m
 CONFIG_CRYPTO_CRCT10DIF=y
 CONFIG_CRYPTO_MD4=m
 CONFIG_CRYPTO_MD5=m
-CONFIG_CRYPTO_RMD128=m
 CONFIG_CRYPTO_RMD160=m
-CONFIG_CRYPTO_RMD256=m
-CONFIG_CRYPTO_RMD320=m
-CONFIG_CRYPTO_SHA512=m
-CONFIG_CRYPTO_TGR192=m
 CONFIG_CRYPTO_WP512=m
 CONFIG_CRYPTO_BLOWFISH=m
 CONFIG_CRYPTO_CAMELLIA=m
@@ -570,12 +549,11 @@ CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
 CONFIG_CRYPTO_DEV_FSL_CAAM=y
-CONFIG_CRYPTO_DEV_FSL_CAAM_SM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=m
 CONFIG_CMA_SIZE_MBYTES=320
 CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
