[fsimx8mp]: Add aliases for spi_a/b
[fsimx8mp]: Add aliases for spi_a/b
- armstonemx8mp spi_a (ecspi3) to spi1 (spidev1.0)
  spi_b (ecspi2) to spi0 (spidev0.0)
- picocoremx8mp spi_a (ecspi3) to spi2 (spidev2.0)
  spi_b (ecspi2) to spi1 (spidev1.0)

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -31,6 +31,8 @@
 		snvs_rtc = &snvs_rtc;
 		ethernet0 = &eqos;
 		ethernet1 = &fec;
+		spi1 = &ecspi2;
+		spi2 = &ecspi3;
 	};
 
 	/* -------------------- BOARD INFO -------------------- */
