Improve picocoremx8mpr2 g133han01 display
Improve picocoremx8mpr2 g133han01 display

--- a/arch/arm64/boot/dts/F+S/picocoremx8mpr2-lcdif-g133han01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mpr2-lcdif-g133han01.dts
@@ -31,9 +31,11 @@
  * corresponds to the LVDS channel where the display is connected to.
  *
  */
-#define CONFIG_PICOCOREMX8MP_PANEL0	DISPLAY_LVDS1
-#define CONFIG_PICOCOREMX8MP_PANEL1	DISPLAY_LVDS2
+#define CONFIG_PICOCOREMX8MP_PANEL0	DISPLAY_LVDS0
+#define CONFIG_PICOCOREMX8MP_PANEL1	DISPLAY_NONE
 #define CONFIG_PICOCOREMX8MP_PANEL2	DISPLAY_NONE
+
+#define CONFIG_PICOCOREMX8MP_MIPI_DSI_LVDS
 
 /* Enables support for AUO G133HAN01.0 - 19:9 FHD, 1920(H)x1080(V) panel */
 #define DISPLAY_LVDS_G133HAN010
