Improve armstonemx8mp.dtsi
Improve armstonemx8mp.dtsi
- Add aliases for i2c busses. It needed for the
  F&S Release Tester.
- Add query for SPI_B/I2C_A. Both are on the same pins
  of feature connectors and must be enabled by the hardware
  configuration. In case CONFIG_ARMSTONEMX8MP_SPI_B is defined
  then disable IC2_A. Otherwise enable I2C_A node.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -56,6 +56,11 @@
 #undef CONFIG_ARMSTONEMX8MP_UART_B_RTSCTS
 #endif
 
+#ifdef CONFIG_ARMSTONEMX8MP_SPI_B
+#undef CONFIG_ARMSTONEMX8MP_I2C_A
+#endif
+
+
 #if defined(CONFIG_ARMSTONEMX8MP_UART_D) || defined(CONFIG_ARMSTONEMX8MP_UART_D_RTSCTS) \
 	|| defined(CONFIG_ARMSTONEMX8MP_SPI_B) || defined(CONFIG_ARMSTONEMX8MP_I2C_C) \
 	|| defined(CONFIG_ARMSTONEMX8MP_UART_B) || defined(CONFIG_ARMSTONEMX8MP_UART_C)
@@ -72,6 +77,12 @@
 		ethernet1 = &fec;
 		spi0 = &ecspi2;
 		spi1 = &ecspi3;
+		i2c0 = &i2c1;
+		i2c1 = &i2c2;
+		i2c2 = &i2c3;
+		i2c3 = &i2c4;
+		i2c4 = &i2c5;
+		i2c5 = &i2c6;
 	};
 
 	reserved-memory {
