--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -418,6 +418,15 @@
 	};
 };
 
+
+&audio_blk_ctrl {
+#ifdef CONFIG_PICOCOREMX8MP_SGTL5000_AUDIO
+	assigned-clocks = <&clk IMX8MP_CLK_SAI2>;
+	assigned-clock-parents = <&clk IMX8MP_AUDIO_PLL1_OUT>;
+	init-on-array = <IMX8MP_CLK_AUDIO_BLK_CTRL_SAI2_MCLK1>;
+#endif
+};
+
 #ifdef CONFIG_PICOCOREMX8MP_I2C_E
 &i2c1 {
 	clock-frequency = <400000>;
@@ -453,7 +462,6 @@
 		#sound-dai-cells = <0>;
 		compatible = "fsl,sgtl5000";
 		clocks = <&audio_blk_ctrl IMX8MP_CLK_AUDIO_BLK_CTRL_SAI2_MCLK1>;
-		assigned-clocks = <&audio_blk_ctrl IMX8MP_CLK_AUDIO_BLK_CTRL_SAI2_MCLK1>;
 		reg = <0xa>;
 		mono2both;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
