--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,1 +1,4 @@
-dtb-$(CONFIG_ARCH_MXC) += fsimx8ulp.dtb fsimx8ulp_drm.dtb
+dtb-$(CONFIG_ARCH_MXC) += \
+		fsimx8ulp.dtb \
+		fsimx8ulp_drm.dtb \
+		fsimx8ulp_drm+cam.dtb
